2010-02-24  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: fix the refresh time in function
	"activateAjaxRefresh", in functions "activateAjaxRefresh" and "addPoint"
	 add status agent.
	 
	* include/javascript/openlayers.pandora.js: add function "changeShowStatus"
	for change show icons by status, in function "changeRefreshTime" add reset
	timer, in function "js_addPoint" and "js_addPointExtent" add the state and
	hide if it's necesary.
	
	* operation/gis_maps/render_view.php: change the style of page, and add
	controls for hide agent icons by state.

	* operation/gis_maps/ajax.php: add the option "get_map_connection_data" in
	switch for get map connection data.

	* godmode/gis_maps/configure_gis_map.php: start to develop the preview map
	in editor.

2010-02-24  Pablo de la Concepción <pablo.concepcion@artica.es>

	* operation/gis_maps/render_view.php: Changed PanZoom
	to PanZoomBar in the map.

2010-02-23  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: in function "activateAjaxRefresh" add the
	posibility to change refresh time in execution time.
	
	* include/functions_ui.php: add in the "print_page_header" the feature to
	pass a array of buttons/items.

	* include/javascript/openlayers.pandora.js: add the function
	"changeRefreshTime" for change the refresh time.

	* operation/gis_maps/render_view.php: change the top of page for to
	adapt the new header, and add refresh control.

2010-02-23  Pablo de la Concepción <pablo.concepcion@artica.es>

	* godmode/setup/gis_step_2.php, godmode/gis_maps/configure_gis_map.php: 
	Usability improvements, change some texts, added some contextual tips.

2010-02-23  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: change the function "activateAjaxRefresh" for
	refresh also the agent maps, and in the function "getAgentMap" show icon
	with status the agent maps.
	* operation/gis_maps/ajax.php: in the switch option "get_new_positions"